# AI-OS

./: .env.example  .gitignore  AGENCY_OS_KICKSTART.md  AGENCY_TESTING.md  ARCHITECTURE.md  CLAUDE.md  CREDENTIALS.md  Dockerfile  README.md  TESTING_IN_CURSOR.md  connections.md  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt
.cursor/rules/: agency-os.mdc
ais_os/: __init__.py  __main__.py  cli.py  cli_lead.py  config.py  logging_setup.py
ais_os/agents/: __init__.py  automation_agent.py  base.py  browser_agent.py  coding_agent.py  deployment_agent.py  executive_agent.py  meeting_agent.py  memory_agent.py  outreach_agent.py  registry.py  research_agent.py  shared.py
archives/: legacy-memory-context.md
configs/: agency.yaml  default.yaml  free-test.yaml
context/: agency-profile.md  clients.md  priorities.md
fixtures/: sample_leads.json
integrations/: __init__.py
prompts/: lead_scoring.md
references/: claude-code-api.md  clickup-api.md  connections-guide.md  docuseal-api.md  env-api-keys.md  gdrive-api.md  google-ads-api.md  meta-ads-api.md  onboarding-sop.md  proposal-template.md  report-template.md
scripts/: _common.py  clickup_create_project.py  docuseal_send_contract.py  enrich_company.py  gdrive_create_folder.py  google_ads_pull.py  meta_ads_pull.py  send_email.py  setup.ps1  setup.sh  test-agency-leads.ps1  test-application.ps1  test-free-models.ps1  validate_repo.py
sessions/: 749346d3.json
templates/: contract-template.md  proposal-template.md  report-template.md
voice/: __init__.py
workflows/: __init__.py
(+41 files in other folders)
