[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ais-os"
version = "0.1.0"
description = "Terminal-first AI Operating System — extends AIS-OS with Python runtime"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
    "aiofiles>=23.2.1",
]

[project.scripts]
ais = "ais_os.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ais_os*"]
